# NSCool

./: .gitignore  Cargo.toml  ERROR.md  NSCool_List.md  PROGRESS.md  README.md  bring_nscool.sh  build.rs  frepl_out.f90
data/Data_Files/: con_crust_cryst_Itoh.csv  con_crust_cryst_Itoh.nc
data/EOS/: APR_EOS.csv  APR_EOS.nc
data/EOS/Crust/: AccFeNPC.csv  AccFeNPC.nc  AccFePCN.csv  AccFePCN.nc  AccPdNPC.csv  AccPdNPC.nc  AccPdPCN.csv  AccPdPCN.nc  BBP1971.csv  BBP1971.nc  BPS1971.csv  BPS1971.nc  CatHZDNV.csv  CatHZDNV.nc  HZ1990.csv  (+1 more)
data/I_Files/: I.toml  I_Accretion_0.toml  I_Accretion_10yr-100yr-0.3Edd.toml  I_Accretion_Const-0.2Edd.toml  I_Bfield_0.toml  I_Bound_Acc.toml  I_Bound_Fe.toml  I_Conduct_12.toml  I_Conduct_22.toml  I_Conduct_32.toml  I_Heat_0.toml  I_Neutrino_1.toml  I_Pairing_0-0-0.toml  I_Pairing_SFB-0-0.toml  I_Pairing_SFB-0-T73.toml  I_Pairing_SFB-a-T73.toml  I_Pairing_SFB-b-T73.toml  I_Pairing_SFB-c-T73.toml  I_Strange_21-19-20-10.toml  I_Struct_1.6e14-4.0e11-1e10_normal.toml  I_Struct_1.6e14-6.2e11-1e8_fine.toml  I_Struct_1.6e14-6.2e11-1e8_veryfine.toml
ref/Test/: README.md  a.out  density.f90  eff_mass.f90  p_electron.f90  pressure.f90  tc.f90  tc_ioffe_test  tc_ioffe_test.f90  test_set.mod
src/: lib.rs
src/backend/: accretion.rs  boundary.rs  conductivity.rs  conductivity_crust.rs  density.rs  eff_mass.rs  inc.rs  mod.rs  neutrino.rs  opacity.rs  tc.rs  tc_ioffe.rs
src/conv/: data_conv.rs  data_type.rs  mod.rs
src/legacy/: boundary.c  boundary.f90  conductivity_crust.c  conductivity_crust.f90  tc.c  tc.f90
tests/: p_electron.rs
