[package]
name = "nscool"
version = "0.1.0"
build = "build.rs"
authors = ["axect <axect@outlook.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peroxide = { version = "0.18", features = ["O3", "plot", "dataframe"] }
libc = "0.2"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }